- 新增 Infrastructure.Core, Infrastructure.HttpClient, Infrastructure.DataStorage - 新增 Application.plist -> Environment - 修改 xcconfig 的檔名

--- a/src/Application/Application/Resources/Environment_DEV.xcconfig
+++ b/src/Application/Application/Resources/Environment_DEV.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Application_PROD.xcconfig
+//  Environment_DEV.xcconfig
 //  Application
 //
 //  Created by Irving Huang on 2023/1/11.
@@ -8,8 +8,8 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-Environment = PROD
+Environment = DEV
 
-APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer
+APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer.DEV
 
-APP_DISPLAY_NAME = TMDBViewer
+APP_DISPLAY_NAME = 開發版_TV
