--- a/src/Application/Application/Resources/Environment_PROD.xcconfig
+++ b/src/Application/Application/Resources/Environment_PROD.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Application_DEV.xcconfig
+//  Environment_PROD.xcconfig
 //  Application
 //
 //  Created by Irving Huang on 2023/1/11.
@@ -8,8 +8,8 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-Environment = DEV
+Environment = PROD
 
-APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer.DEV
+APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer
 
-APP_DISPLAY_NAME = 開發版_TV
+APP_DISPLAY_NAME = TMDBViewer
