- 新增 各種專案需求檔案 - 新增 TMDB.Movies - 新增 MoviesRepository -> findPlayingList() - 新增 重要檔案的Unit Test

--- a/src/Application/Application/Resources/Environment_DEV.xcconfig
+++ b/src/Application/Application/Resources/Environment_DEV.xcconfig
@@ -13,3 +13,6 @@ Environment = DEV
 APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer.DEV
 
 APP_DISPLAY_NAME = 開發版_TV
+
+ACCESS_TOKEN = YOUR_TOKEN
+
