- 新增 TMDB.Movies.Accesses -> findPlayingList 的 Unit test - 新增 TMDB.Movies.Core -> Movie -> 真實圖片的網址 - 新增 Widget -> AsyncHelper() - 新增 Application -> Functions.swift - 新增 MovieCard - 新增 NowPlaying 的頁面 - 修改 設定 ServiceUrl 於 .xcconfig - 修改 取消 framework 的 auto sign - 修改 dateformatter 為 custom (*之後應改為可以自由調整的方式)

--- a/src/Application/Application/Resources/Environment_DEV.xcconfig
+++ b/src/Application/Application/Resources/Environment_DEV.xcconfig
@@ -14,5 +14,7 @@ APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer.DEV
 
 APP_DISPLAY_NAME = 開發版_TV
 
+APP_SERVICE_URL = https:/$()/api.themoviedb.org/3/
+
 ACCESS_TOKEN = YOUR_TOKEN
 
