--- a/src/Application/Application/Resources/Application.plist
+++ b/src/Application/Application/Resources/Application.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ServiceUrl</key>
+	<string>${APP_SERVICE_URL}</string>
 	<key>AccessToken</key>
 	<string>$(ACCESS_TOKEN)</string>
 	<key>Environment</key>
