- 新增 透過 ApiId 來進行登入，並且會透過 keyChain 記錄下 apiId & sessionId

--- a/src/Application/Application/Resources/Environment_PROD.xcconfig
+++ b/src/Application/Application/Resources/Environment_PROD.xcconfig
@@ -15,3 +15,5 @@ APP_BUNDLE_IDENTIFIER = com.irvinghuang.TMDBViewer
 APP_DISPLAY_NAME = TMDBViewer
 
 APP_SERVICE_URL = https:/$()/api.themoviedb.org/3/
+
+APP_URL_SCHEME = tmdbviewer
