--- a/src/Application/Application/Resources/Application.plist
+++ b/src/Application/Application/Resources/Application.plist
@@ -2,9 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>${APP_URL_SCHEME}</string>
+			</array>
+		</dict>
+	</array>
 	<key>ServiceUrl</key>
 	<string>${APP_SERVICE_URL}</string>
 	<key>Environment</key>
 	<string>$(Environment)</string>
+	<key>UrlScheme</key>
+	<string>${APP_URL_SCHEME}</string>
 </dict>
 </plist>
